src/components/Projects/Project/Project.module.scss
@import "../../../common/styles/variables";

.project {
  background-color: var(#{--bgPrimaryDefault});
  color: var(#{--textDefault});
  border: 2px solid #E7E7E7;
  border-radius: 10px;
  display: flex;
  flex-direction: column;
  align-items: flex-start;
  box-shadow: 0 0 10px 1px var(#{--boxShadowDefault});
  overflow: hidden;
  position: relative;

  .photoWrapper {
    width: 100%;
    height: 300px;
    overflow: hidden;

    .photo {
      display: flex;
      flex-direction: column;
      align-items: center;
      justify-content: center;
      width: 100%;
      height: 300px;
      cursor: pointer;
      background-color: #eeeef5;
      border: none;
      position: relative;
      background-size: cover;
      background-position: center;
      transition: all .8s cubic-bezier(0.42, 0, 0.58, 1);

      &:before {
        content: '';
        position: absolute;
        background-color: rgba(0, 0, 0, 0.3);
        bottom: 0;
        top: 0;
        left: 0;
        right: 0;
        opacity: 0;
        border-radius: 9px;
        transition: all 0.5s ease-out;
      }

      &:hover {
        transform: scale(1.05);

        &:before {
          opacity: 1;
        }

        .btn {
          opacity: 1;
        }
      }

      .btn {
        opacity: 0;
        position: absolute;
        background-color: #f5df50;
        color: #000000;
        font-size: 16px;
        padding: 12px 24px;
        border: none;
        cursor: pointer;
        border-radius: 5px;
        text-align: center;
        transition: all 0.8s ease-in-out;
      }
    }
  }

  .text {
    padding: 20px;

    h3 {
      display: inline-block;
      font-weight: 600;
      font-size: 20px;
      margin-bottom: 20px;
      cursor: pointer;
    }

    p {
      color: var(#{--textSecondaryDefault});
      text-align: justify;
      line-height: 1.4;
      border-radius: 9px;
    }
  }

  .btnView {
    position: absolute;
    width: 100%;
    opacity: 0;
    bottom: 0;

    button {
      width: 100%;
      background-color: var(#{--buttonsDefault});
      color: #ffffff;
      border: none;
      padding: 10px;
      cursor: pointer;
      font-family: 'Poppins-Regular', 'Golos_Text', sans-serif;
      font-size: 16px;
      transition: 0.5s;

      &:active{
        background-color: #f5df50;
        color: #000000;
      }
    }

    @media screen and (max-width: 1199px) {
      opacity: 1;
    }
  }

  @media screen and (max-width: 1199px) {
    .text {
      padding: 20px 20px 60px;
    }
  }
}

